# pickaxe

./: Cargo.toml  devenv.nix  pickaxe.code-workspace  todo.md
src/: fabric.rs  github.rs  instance.rs  java.rs  main.rs  mc.rs  modrinth.rs  server.rs
src/commands/: add.rs  mod.rs  new.rs  remove.rs  start.rs  stop.rs
src/fabric/: meta.rs  mod.rs
