[package]
name = "pickaxe"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
capitalize = "0.3.4"
clap = { version = "4.5.37", features = ["derive"] }
console = "0.15.11"
dialoguer = "0.11.0"
dirs = "6.0.0"
indicatif = "0.17.11"
number-names = "0.2.0"
reqwest = {version = "0.12.15", features = ["blocking", "json"] }
semver = {version = "1.0.26", features = ["serde"]}
serde = {version = "1.0.219", features = ["derive"] }
serde_with = "3.12.0"
tokio = {version = "1.44.2", features = ["macros", "rt-multi-thread"]}
toml = "0.8.20"
